1、Room 静态资源整合问题处理  静态资源映射问题原理需要多多了解 2、支持one to one 的基础上 整合 Room 群聊视频模式

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,10 @@ server.servlet.context-path=/
 # LOGGING
 logging.level.com.arj.webrtc.kurento.arjwebrtc=debug
 
+spring.thymeleaf.mode=LEGACYHTML5
+#spring.resources.static-locations=classpath:templates/
+#spring.mvc.static-path-pattern=/**
+
 # 日志配置文件路径，如 classpath:logback-spring.xml
 #logging.config=classpath:logback-spring.xml
 
