--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,13 @@
             <artifactId>kurento-utils-js</artifactId>
             <version>${kurento-utils-js.version}</version>
         </dependency>
+
+        <!--导入配置文件处理器，配置文件进行绑定就会有提示-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
