--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,22 @@
 # BANNER
 spring.banner.location=classpath:banner.txt
 
-# 默认的 8080 我们将它改成 9090
+# \u9ED8\u8BA4\u7684 8080 \u6211\u4EEC\u5C06\u5B83\u6539\u6210 9090
 server.port=9090
-# 未定义上下文路径之前 地址是 http://localhost:8080 定义了后 http://localhost:9090 你能在tomcat做的事情，配置文件都可以
+# \u672A\u5B9A\u4E49\u4E0A\u4E0B\u6587\u8DEF\u5F84\u4E4B\u524D \u5730\u5740\u662F http://localhost:8080 \u5B9A\u4E49\u4E86\u540E http://localhost:9090 \u4F60\u80FD\u5728tomcat\u505A\u7684\u4E8B\u60C5\uFF0C\u914D\u7F6E\u6587\u4EF6\u90FD\u53EF\u4EE5
 server.servlet.context-path=/
 
 # LOGGING
 logging.level.com.arj.webrtc.kurento.arjwebrtc=debug
 
 spring.thymeleaf.mode=LEGACYHTML5
+
 #spring.resources.static-locations=classpath:templates/
 #spring.mvc.static-path-pattern=/**
 
-# 日志配置文件路径，如 classpath:logback-spring.xml
+spring.mvc.favicon.enable=true
+
+# \u65E5\u5FD7\u914D\u7F6E\u6587\u4EF6\u8DEF\u5F84\uFF0C\u5982 classpath:logback-spring.xml
 #logging.config=classpath:logback-spring.xml
 
 server.ssl.key-store=classpath:keystore.jks
@@ -22,25 +25,25 @@ server.ssl.key-store-type=JKS
 server.ssl.key-alias=kurento-selfsigned
 
 ################3
-redis-websocket-channel = chat
+#redis-websocket-channel = chat
 
-################ Redis 基础配置 ##############
-# Redis数据库索引（默认为0）
-spring.redis.database=0
-# Redis服务器地址
-spring.redis.host=localhost
-# Redis服务器连接端口
-spring.redis.port=6379
-# Redis服务器连接密码（默认为空）
-spring.redis.password=123456
-# 连接池最大连接数（使用负值表示没有限制）
-spring.redis.pool.max-active=8
-# 连接池最大阻塞等待时间（使用负值表示没有限制）
-spring.redis.pool.max-wait=-1
-# 连接池中的最大空闲连接
-spring.redis.pool.max-idle=8
-# 连接池中的最小空闲连接
-spring.redis.pool.min-idle=0
-# 连接超时时间（毫秒）
-spring.redis.timeout=60000
+################ Redis \u57FA\u7840\u914D\u7F6E ##############
+# Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
+#spring.redis.database=0
+# Redis\u670D\u52A1\u5668\u5730\u5740
+#spring.redis.host=localhost
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
+#spring.redis.port=6379
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
+#spring.redis.password=123456
+# \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+#spring.redis.pool.max-active=8
+# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+#spring.redis.pool.max-wait=-1
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
+#spring.redis.pool.max-idle=8
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
+#spring.redis.pool.min-idle=0
+# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
+#spring.redis.timeout=60000
 
