--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,9 @@ server.ssl.key-store-password=kurento
 server.ssl.key-store-type=JKS
 server.ssl.key-alias=kurento-selfsigned
 ################ URL \u57FA\u7840\u914D\u7F6E ##############
+# KMS \u5730\u5740
 kurento_url=ws://192.168.1.235:8888/kurento
+#\u7F51\u683C\u5316\u5E73\u53F0rest \u63A5\u53E3\u5730\u5740
 arjccm_rest_url=http://192.168.1.237:8081/arjccm/app/rest
 ################3
 #redis-websocket-channel = chat
