--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,9 +26,13 @@ server.ssl.key-store-type=JKS
 server.ssl.key-alias=kurento-selfsigned
 ################ URL \u57FA\u7840\u914D\u7F6E ##############
 # KMS \u5730\u5740
-kurento_url=ws://192.168.1.235:8888/kurento
+#kurento_url=ws://10.224.13.145:8888/kurento
+#kurento_url=ws://192.168.1.235:8888/kurento
+kurento_url=ws://47.94.247.75:8888/kurento
+#kurento_url=ws://172.18.0.8:8888/kurento
 #\u7F51\u683C\u5316\u5E73\u53F0rest \u63A5\u53E3\u5730\u5740
-arjccm_rest_url=http://192.168.1.237:8081/arjccm/app/rest
+#arjccm_rest_url=http://10.224.13.146:8080/arjccm/app/rest
+arjccm_rest_url=http://153.0.171.153:8090/arjccm/app/rest
 ################3
 #redis-websocket-channel = chat
 
